Yupana 0.1alpha1 (future release)
----------------------------
- initial alpha release, based on Yacomas 0.3.5alpha
- Mostly all functions/modules rewrited from scratch
- Added multiple proposal's files capability
- Added proposal's comments capability
- Added new event scheduler option
- Added catalog manager
- Added config manager
- Added support for clean urls with mod_rewrite
- Added filters on tables
- Added adodb library
- Added phpmailer library
- Added templates for common sections
- New css stylesheet
- Added external authentification support